fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -372,7 +372,7 @@ visibility: hidden;
 .schoolPage #schoolHeading h1{
 position: absolute;
 top: 100px;
-right: 70px;
+right: 10%;
 font-size: 50px;
 font-family: Arial, Helvetica, sans-serif;
 }
@@ -381,7 +381,7 @@ font-family: Arial, Helvetica, sans-serif;
     width: 100px;
     position: absolute;
     top: 100px;
-    left: 60px;
+    left: 10%;
 }
 
 /* TAGS */
